2006-01-23 Perry
 Add repro files to selftests from 
  BUG [ 1406950 ] QuickCompare vs diffutils, disagree on trailing whitespace
 Current selftests status: Failure count: 9 (of 108)
  Failing -b t002 (all 3 platforms)
  Failing -bi t002 (all 3 platforms)
  Failing -b bug1406950 (all 3 platforms)
 PATCH: [ 1406950 ] QuickCompare vs diffutils, disagree on trailing whitespace
  Src: ByteComparator.cpp
 (selftests results unimproved, because selftest uses diffutils core, not QuickCompare)

2006-01-22 Perry
 PATCH: [ 1405540 ] Cleanup filters dialog
  Src: FileFiltersDlg.cpp FileFiltersDlg.h

2006-01-22 Tim
 PATCH: [ 1411102 ] Add '*.dsl' and '*.jsp' to syntax highlighter
  Src/editlib: ccrystaleditview.cpp

2006-01-22 Perry
 PATCH: [ 1411406 ] self-tests and new arguments and new diff2winmerge.exe
  Src: Changes.txt MainFrm.cpp MainFrm.h Merge.cpp Merge.h MergeArgs.cpp
  Src/Common: OptionsMgr.cpp OptionsMgr.h
  New directory WinMerge/diff2winmerge, for diff2winmerge utility
  New directory WinMerge/selftests added
 Current selftests status: Failure count: 6 (of 108)
  Failing -b t002 (all 3 platforms)
  Failing -bi t002 (all 3 platforms)

2006-01-21 Kimmo
 PATCH: [ 1411150 ] Add GetActiveMergeView for MergeDoc
  Src: MergeDoc.cpp MergeDoc.h

2006-01-21 Perry
 PATCH: [ 1407740 ] Polish translation update (for version 2.4.4.0)
  Submitted by dr_prozac
  (Perry merging many of these to cvs trunk)
   Src/Language/Polish: MergePolish.rc

2006-01-20 Kimmo
 BUG: [ 1408587 ] Unused DoScroll() function in Merge*View
  Remove DoScroll() from CMergeEditView and CMergeDiffDetailView
  Src: MergeDiffDetailView.cpp MergeDiffDetailView.h MergeEditView.cpp
   MergeEditView.h

2006-01-17 Kimmo
 PATCH: [ 1406207 ] Fix error message for unique folders
  Src: DirView.cpp Merge.rc resource.h
  Src/Language: */Merge*.rc

2006-01-17 Perry
 PATCH: [ 1401711 ] A hybrid of word diff and char diff
 Submitted by Takashi Sawanaka
  Src: MergeDocLineDiffs.cpp PropEditor.cpp